tests/snapshots/examples_fixtures/type_system__failing__179_data_missing_open_brace.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/179_data_missing_open_brace.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E034]: UNEXPECTED TOKEN

Expected `{` to begin data constructors.

  --> examples/type_system/failing/179_data_missing_open_brace.flx:1:15
  |
1 | data Maybe<T> Some(T), None }
  |               ^^^^

Hint:
  Data declarations use `data TypeName { Ctor, ... }`.
== stdout ==
<not executed>
